--- a/index.html
+++ b/index.html
@@ -55,109 +55,114 @@
     </div>
 
     <div class="container-fluid">
-        <h2>My Recent Works</h2> <hr>
+        <h2>My Recent Works</h2>
+        <hr>
         <img src="./assets/Img-Placeholder-desktop.png" alt="">
         <h2>Multi-Post Stories</h2>
-        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. 
+        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.
             This has been the industry's standard dummy text ever since the 1500s, when an unknown
-             printer took a standard dummy text.</p>
+            printer took a standard dummy text.</p>
 
-             <button type="button" class="btn btn-light text-black">CSS</button>
-             <button type="button" class="btn btn-light text-black">HTML</button>
-             <button type="button" class="btn btn-light text-black">Bootstrap</button>
-             <button type="button" class="btn btn-light text-black">Ruby</button>
+        <button type="button" class="btn btn-light text-black">CSS</button>
+        <button type="button" class="btn btn-light text-black">HTML</button>
+        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+        <button type="button" class="btn btn-light text-black">Ruby</button>
     </div>
 
-    
-      
+
+
 
     <div class="container">
-        <div class="row"> 
-          <div class="col-md-4">
-            <div class="card">
-                <img src="./assets/card1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Data Dashboard Healthcare</h5>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                  <button type="button" class="btn btn-light text-black">CSS</button>
-                  <button type="button" class="btn btn-light text-black">HTML</button>
-                  <button type="button" class="btn btn-light text-black">Bootstrap</button>
-                  <button type="button" class="btn btn-light text-black">Ruby</button>
-                </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card" >
-                <img src="./assets/card1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Data Dashboard Healthcare</h5>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                  <button type="button" class="btn btn-light text-black">CSS</button>
-                  <button type="button" class="btn btn-light text-black">HTML</button>
-                  <button type="button" class="btn btn-light text-black">Bootstrap</button>
-                  <button type="button" class="btn btn-light text-black">Ruby</button>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <div class="card-img-overlay" style="margin-top: 200px;">
+                        <h5 class="card-title">Data Dashboard Healthcare</h5>
+                        <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
+                            reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+                        <button type="button" class="btn btn-light text-black">CSS</button>
+                        <button type="button" class="btn btn-light text-black">HTML</button>
+                        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+                        <button type="button" class="btn btn-light text-black">Ruby</button>
+                    </div>
                 </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-                <img src="./assets/card1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Data Dashboard Healthcare</h5>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                  <button type="button" class="btn btn-light text-black">CSS</button>
-                  <button type="button" class="btn btn-light text-black">HTML</button>
-                  <button type="button" class="btn btn-light text-black">Bootstrap</button>
-                  <button type="button" class="btn btn-light text-black">Ruby</button>
-                </div>  
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <div class="card-img-overlay" style="margin-top: 200px;">
+                        <h5 class="card-title">Data Dashboard Healthcare</h5>
+                        <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
+                            reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+                        <button type="button" class="btn btn-light text-black">CSS</button>
+                        <button type="button" class="btn btn-light text-black">HTML</button>
+                        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+                        <button type="button" class="btn btn-light text-black">Ruby</button>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <div class="card-img-overlay" style="margin-top: 200px;">
+                        <h5 class="card-title">Data Dashboard Healthcare</h5>
+                        <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
+                            reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+                        <button type="button" class="btn btn-light text-black">CSS</button>
+                        <button type="button" class="btn btn-light text-black">HTML</button>
+                        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+                        <button type="button" class="btn btn-light text-black">Ruby</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <div class="card-img-overlay" style="margin-top: 200px;">
+                        <h5 class="card-title">Data Dashboard Healthcare</h5>
+                        <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
+                            reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+                        <button type="button" class="btn btn-light text-black">CSS</button>
+                        <button type="button" class="btn btn-light text-black">HTML</button>
+                        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+                        <button type="button" class="btn btn-light text-black">Ruby</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <div class="card-img-overlay" style="margin-top: 200px;">
+                        <h5 class="card-title">Data Dashboard Healthcare</h5>
+                        <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
+                            reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+                        <button type="button" class="btn btn-light text-black">CSS</button>
+                        <button type="button" class="btn btn-light text-black">HTML</button>
+                        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+                        <button type="button" class="btn btn-light text-black">Ruby</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <div class="card-img-overlay" style="margin-top: 200px;">
+                        <h5 class="card-title">Data Dashboard Healthcare</h5>
+                        <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
+                            reads; no accounts or sign-ups required. Has been the industry's standard.</p>
+                        <button type="button" class="btn btn-light text-black">CSS</button>
+                        <button type="button" class="btn btn-light text-black">HTML</button>
+                        <button type="button" class="btn btn-light text-black">Bootstrap</button>
+                        <button type="button" class="btn btn-light text-black">Ruby</button>
+                    </div>
+                </div>
+            </div>
 
-      <div class="container">
-        <div class="row"> 
-          <div class="col-md-4">
-            <div class="card">
-                <img src="./assets/card1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Data Dashboard Healthcare</h5>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                  <button type="button" class="btn btn-light text-black">CSS</button>
-                  <button type="button" class="btn btn-light text-black">HTML</button>
-                  <button type="button" class="btn btn-light text-black">Bootstrap</button>
-                  <button type="button" class="btn btn-light text-black">Ruby</button>
-                </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card" >
-                <img src="./assets/card1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Data Dashboard Healthcare</h5>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                  <button type="button" class="btn btn-light text-black">CSS</button>
-                  <button type="button" class="btn btn-light text-black">HTML</button>
-                  <button type="button" class="btn btn-light text-black">Bootstrap</button>
-                  <button type="button" class="btn btn-light text-black">Ruby</button>
-                </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-                <img src="./assets/card1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Data Dashboard Healthcare</h5>
-                  <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. Has been the industry's standard.</p>
-                  <button type="button" class="btn btn-light text-black">CSS</button>
-                  <button type="button" class="btn btn-light text-black">HTML</button>
-                  <button type="button" class="btn btn-light text-black">Bootstrap</button>
-                  <button type="button" class="btn btn-light text-black">Ruby</button>
-                </div>  
-            </div>
-          </div>
         </div>
-      </div>
+
+
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
