--- a/index.html
+++ b/index.html
@@ -45,32 +45,49 @@
         </div>
     </nav>
 
-    <div class="container-fluid" style="background-color: #1c1a19">
-        <h1 class="text-warning">Hey There. <br> I'm Denio.</h1>
-        <h3 class="text-white">I’m a Software Developer</h3>
-        <p class="text-white">I can help you build a product , feature or website. Look through some of my work and
-            experience! If you like what you see and have a project you need coded,
-            don’t hesitate to contact me.</p>
-        <img src="./assets/Illustration-header@2x.png" style="background-color: #1c1a19">
-    </div>
-
-    <div class="container-fluid">
-        <h2>My Recent Works</h2>
-        <hr>
-        <img src="./assets/Img-Placeholder-desktop.png" alt="">
-        <h2>Multi-Post Stories</h2>
-        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.
-            This has been the industry's standard dummy text ever since the 1500s, when an unknown
-            printer took a standard dummy text.</p>
-
-        <button type="button" class="btn btn-light text-black">CSS</button>
-        <button type="button" class="btn btn-light text-black">HTML</button>
-        <button type="button" class="btn btn-light text-black">Bootstrap</button>
-        <button type="button" class="btn btn-light text-black">Ruby</button>
-    </div>
-
-
-
+    <section class="container-fluid p-5" style="background-color: #1C1A19;">
+        <div class="row">
+          <div class="col-1 d-flex flex-column justify-content-center">
+            <img class="my-2" src="./assets/Icon-GitHub.png" alt="Github icon" width="19">
+            <img class="my-2" src="./assets/Icon-Linkedin.png" alt="Linkedin icon" width="19">
+            <img class="my-2" src="./assets/Icon-Angelist.png" alt="angellist icon" width="19">
+            <img class="my-2" src="./assets/Icon-Twitter.png" alt="twitter icon" width="19">
+            <img class="my-2" src="./assets/Icon-Medium.png" alt="medium icon" width="19">
+          </div>
+          <div class="col-4 d-flex flex-column justify-content-center">
+            <h2 class="headline-section-header crete-round">Hey There.I’m Denio.</h2>
+            <p class="text-white crete-round bold-text">I’m a Software Developer</p>
+            <p class="text-white short-para inter">I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
+          </div>
+          <div class="col-1"></div>
+          <div class="col-6">
+            <img src="./assets/Illustration-header@2x.png" alt="">
+          </div>
+        </div>
+      </section>
+      <section class="container-fluid" style="padding: 8rem;">
+        <div class="col">
+          <div class="row">
+            <h2 class="col-4 pe-0 crete-round" style="font-size: 40px;" >My Recent Works</h2>
+            <hr class="col-8 mt-3 p-5">
+          </div>
+          <div class="row">
+            <img class="col-5" src="./assets/Img-Placeholder.png" alt="" height="350">
+            <div class="col-5 px-4">
+              <h3 class="row crete-round">Multi-Post Stories</h3>
+              <p class="row inter">A daily selection of privately personalized reads; no accounts or sign-ups required. This has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+              <ul class="d-flex list-unstyled justify-content-start">
+                <li><button type="button" class="btn btn-light text-black">CSS</button></li>
+                <li><button type="button" class="btn btn-light text-black">HTML</button></li>
+                <li><button type="button" class="btn btn-light text-black">Bootstrap</button></li>
+                <li><button type="button" class="btn btn-light text-black">Ruby</button></li>
+              </ul>
+              <button class="btn-type-a">See project</button>
+            </div>
+          </div>
+          
+        </div>
+      </section>
 
     <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -162,7 +179,9 @@
         </div>
 
 
-    </div>
+    </div> -->
+
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
