Add the aboutme and contact section

--- a/index.html
+++ b/index.html
@@ -47,53 +47,57 @@
 
     <section class="container-fluid p-5" style="background-color: #1C1A19;">
         <div class="row">
-          <div class="col-1 d-flex flex-column justify-content-center">
-            <img class="my-2" src="./assets/Icon-GitHub.png" alt="Github icon" width="19">
-            <img class="my-2" src="./assets/Icon-Linkedin.png" alt="Linkedin icon" width="19">
-            <img class="my-2" src="./assets/Icon-Angelist.png" alt="angellist icon" width="19">
-            <img class="my-2" src="./assets/Icon-Twitter.png" alt="twitter icon" width="19">
-            <img class="my-2" src="./assets/Icon-Medium.png" alt="medium icon" width="19">
-          </div>
-          <div class="col-4 d-flex flex-column justify-content-center">
-            <h2 class="headline-section-header crete-round">Hey There.I’m Denio.</h2>
-            <p class="text-white crete-round bold-text">I’m a Software Developer</p>
-            <p class="text-white short-para inter">I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
-          </div>
-          <div class="col-1"></div>
-          <div class="col-6">
-            <img src="./assets/Illustration-header@2x.png" alt="">
-          </div>
-        </div>
-      </section>
-      <section class="container-fluid" style="padding: 8rem;">
-        <div class="col">
-          <div class="row">
-            <h2 class="col-4 pe-0 crete-round" style="font-size: 40px;" >My Recent Works</h2>
-            <hr class="col-8 mt-3 p-5">
-          </div>
-          <div class="row">
-            <img class="col-5" src="./assets/Img-Placeholder.png" alt="" height="350">
-            <div class="col-5 px-4">
-              <h3 class="row crete-round">Multi-Post Stories</h3>
-              <p class="row inter">A daily selection of privately personalized reads; no accounts or sign-ups required. This has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-              <ul class="d-flex list-unstyled justify-content-start">
-                <li><button type="button" class="btn btn-light text-black">CSS</button></li>
-                <li><button type="button" class="btn btn-light text-black">HTML</button></li>
-                <li><button type="button" class="btn btn-light text-black">Bootstrap</button></li>
-                <li><button type="button" class="btn btn-light text-black">Ruby</button></li>
-              </ul>
-              <button class="btn-type-a">See project</button>
+            <div class="col-1 d-flex flex-column justify-content-center">
+                <img class="my-2" src="./assets/github.png" alt="Github icon" width="19">
+                <img class="my-2" src="./assets/Linkedin.png" alt="Linkedin icon" width="19">
+                <img class="my-2" src="./assets/angelist.png" alt="angellist icon" width="19">
+                <img class="my-2" src="./assets/twitter.png" alt="twitter icon" width="19">
+                <img class="my-2" src="./assets/Medium.png" alt="medium icon" width="19">
             </div>
-          </div>
-          
+            <div class="col-4 d-flex flex-column justify-content-center">
+                <h2 style="color: #f55800;">Hey There. <br> I’m Denio.</h2>
+                <p class="text-white">I’m a Software Developer</p>
+                <p class="text-white">I can help you build a product, feature or website. Look through some of my work
+                    and experience! If you like what you see and have a project you need coded, don’t hesitate to
+                    contact me.</p>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-6">
+                <img src="./assets/Illustration-header@2x.png" alt="">
+            </div>
         </div>
-      </section>
+    </section>
+    <section class="container-fluid" style="padding: 8rem;">
+        <div class="col">
+            <div class="row">
+                <h2 class="col-4 pe-0" style="font-size: 40px;">My Recent Works</h2>
+                <hr class="col-8 mt-3 p-5">
+            </div>
+            <div class="row">
+                <img class="col-5" src="./assets/Img-Placeholder-desktop.png" alt="" height="350">
+                <div class="col-5 px-4">
+                    <h3 class="row">Multi-Post Stories</h3>
+                    <p class="row">A daily selection of privately personalized reads; no accounts or sign-ups required.
+                        This has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                        took a standard dummy text.</p>
+                    <ul class="d-flex list-unstyled justify-content-start">
+                        <li><button type="button" class="btn btn-light text-black">CSS</button></li>
+                        <li><button type="button" class="btn btn-light text-black">HTML</button></li>
+                        <li><button type="button" class="btn btn-light text-black">Bootstrap</button></li>
+                        <li><button type="button" class="btn btn-light text-black">Ruby</button></li>
+                    </ul>
+                    <button class="btn-type-a">See project</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <img src="./assets/card1.png" alt="...">
                     <div class="card-img-overlay" style="margin-top: 200px;">
                         <h5 class="card-title">Data Dashboard Healthcare</h5>
                         <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
@@ -107,7 +111,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <img src="./assets/card1.png" alt="...">
                     <div class="card-img-overlay" style="margin-top: 200px;">
                         <h5 class="card-title">Data Dashboard Healthcare</h5>
                         <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
@@ -121,7 +125,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <img src="./assets/card1.png" alt="...">
                     <div class="card-img-overlay" style="margin-top: 200px;">
                         <h5 class="card-title">Data Dashboard Healthcare</h5>
                         <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
@@ -135,7 +139,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <img src="./assets/card1.png" alt="...">
                     <div class="card-img-overlay" style="margin-top: 200px;">
                         <h5 class="card-title">Data Dashboard Healthcare</h5>
                         <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
@@ -149,7 +153,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <img src="./assets/card1.png" alt="...">
                     <div class="card-img-overlay" style="margin-top: 200px;">
                         <h5 class="card-title">Data Dashboard Healthcare</h5>
                         <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
@@ -163,7 +167,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./assets/card1.png" class="card-img-top" alt="...">
+                    <img src="./assets/card1.png" alt="...">
                     <div class="card-img-overlay" style="margin-top: 200px;">
                         <h5 class="card-title">Data Dashboard Healthcare</h5>
                         <p class="card-text" style="margin-bottom: 50px;">A daily selection of privately personalized
@@ -178,10 +182,77 @@
 
         </div>
 
+        <section class="container-fluid pb-5" style="background-color:#262626 ; padding-top: 20%;">
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-4 ">
+                    <h2 style="font-size: 4rem; color: #f55800;">About me</h2>
+                    <p class="text-white ">Hey there! I can help you build a product, feature or website. Look through
+                        some of my work and experience! If you like what you see and have a project you need coded,
+                        don’t hesitate to contact me.</p>
+                    <button class="btn-type-a">Get my resume</button>
+                </div>
+                <div class="col-2"></div>
+                <img src="./assets/illustration-aboutme@2x.png" alt="" class="col-5">
+            </div>
+            <div class="row about-me-section-break my-5">
+                <hr class="">
+            </div>
+            <div class="d-flex proficiencies justify-content-between">
+                <ul class="text-white list-unstyled ">
+                    <li class="text-white">Languages</li>
+                    <li class="text-white">Javascript</li>
+                    <li class="text-white">Ruby</li>
+                    <li class="text-white">CSS</li>
+                    <li class="text-white">HTML</li>
+                </ul>
+                <ul class="text-white list-unstyled ">
+                    <li class="text-white">Frameworks</li>
+                    <li class="text-white">React.js</li>
+                    <li class="text-white">Ruby on rails</li>
+                    <li class="text-white">RSpec</li>
+                    <li class="text-white">Capybara</li>
+                    <li class="text-white">Selenium</li>
+                </ul>
+                <ul class="text-white list-unstyled">
+                    <li class="text-white">Skills</li>
+                    <li class="text-white">Database Management</li>
+                    <li class="text-white">Version Control</li>
+                    <li class="text-white">CLI</li>
+                    <li class="text-white">API Design</li>
+                    <li class="text-white">Web Development</li>
+                </ul>
+            </div>
+        </section>
+        <section class="container-fluid">
+            <div class="row" style="padding: 7rem;">
+                <h3 class="col-4 text-body-emphasis" style="font-weight: 600; line-height: 30px;">I'm always interested
+                    in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+                <div class="col">
+                    <form action="">
+                        <input type="text" placeholder="Fullname"
+                            class="form-control m-2 border-0 border-bottom border-1 rounded-0">
+                        <input type="email" placeholder="Email"
+                            class="form-control m-2 border-0 border-bottom border-1 rounded-0">
+                        <textarea name="" id="" cols="30" rows="3" class="form-control m-2"
+                            placeholder="Write me something..." style="border: none;"></textarea>
+                        <button>Get in touch</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <footer class="container-fluid p-4 border-none border-top">
+            <div class="d-flex justify-content-center">
+                <img class="my-2" src="./assets/Icon-GitHub.png" alt="Github icon" width="19">
+                <img class="my-2" src="./assets/Icon-Linkedin.png" alt="Linkedin icon" width="19">
+                <img class="my-2" src="./assets/Icon-Angelist.png" alt="angellist icon" width="19">
+                <img class="my-2" src="./assets/Icon-Twitter.png" alt="twitter icon" width="19">
+                <img class="my-2" src="./assets/Icon-Medium.png" alt="medium icon" width="19">
+            </div>
+        </footer>
+   </div>
 
-    </div>
 
-    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
